@startuml bank

class TypeCompte {
    -int id
    -string Type
    -int intérets
}

class Compte {
    -int id
    -double solde
}

  class Client {
    -int id
    -string nom
    -string prenom
}

class Operation {
    -int id
}

class TypeOperation {
    -int id
    -string type
}

Compte "0..n" --> "1" TypeCompte : est typée
Compte "0..n" -- "1" Client : est possédé
Compte "1" -- "0..n" Operation : effectué
Operation "0..n" -- "1" TypeOperation : est typée

@enduml